--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,8 +1,8 @@
 /* Atur tampilan umum halaman */
 body {
   font-family: Arial, sans-serif;
-  background-color: #000000;
-  color: #e6f0fa;
+  background-color: #d7dadf;
+  color: #a00a5d;
   padding: 10px;
 }
 
@@ -25,7 +25,7 @@ ol {
 /* Atur setiap item list (li) */
 li {
   background-color: #e6f0fa;
-  color: #00bfff;
+  color: #ec04e9;
   padding: 10px;
   margin: 5px 0;
   border-radius: 8px;
@@ -48,22 +48,22 @@ nav {
 nav a {
   padding: 10px 20px;
   border-radius: 30px;
-  background-color: #00bfff;
+  background-color: #f50987;
   color: white;
   font-weight: bold;
   text-decoration: none;
   transition: background-color 0.3s ease, transform 0.2s ease;
-  box-shadow: 0 2px 5px rgba(0, 191, 255, 0.3);
+  box-shadow: 0 2px 5px rgba(199, 78, 189, 0.3);
 }
 
 nav a:hover {
-  background-color: #1e90ff;
+  background-color: #f006c5;
   transform: scale(1.05);
 }
 
 nav a.active {
-  background-color: #87cefa;
-  color: #003366;
+  background-color: #aa57aa;
+  color: #66003d;
 }
 
 /* Tampilan list teman */
@@ -78,18 +78,18 @@ nav a.active {
 
 .friends-container li {
   background-color: #e6f7ff;
-  color: #00bfff;
+  color: #bd1284;
   margin: 10px 0;
   padding: 12px 20px;
   border-radius: 10px;
   font-size: 18px;
   transition: background-color 0.3s;
-  border: 1px solid #b0e0e6;
+  border: 1px solid #fc97eb;
 }
 
 .friends-container li a {
   text-decoration: none;
-  color: #00bfff;
+  color: #bd1284;
 }
 
 .friends-container li:hover {
