--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,5 @@
-$primary-color: #d6d7e2db;
-$secondary-color: #cbbcbf;
+$primary-color: #ffffffdb;
+$secondary-color: #ffffff;
 $tree-color: #030303;
 $font-stack: Helvetica, sans-serif;
 
