--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
@@ -12,13 +15,15 @@
   <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
 
   <!-- Plugins -->
+  {% feed_meta %}
   {% seo %}
 </head>
+
 <body>
   <div class="container">
     <header>
-      <img src="{{ site.baseurl }}/assets/image/alsa.jpeg" alt="Profile Picture" class="profile-Picture">
-      <h1>Al Anisa Maharani</h1>
+      <img src="{{ site.baseurl }}/assets/image/alsa.jpeg" alt="Profile Picture" class="profile-picture">
+      <h1>{{ site.title }}</h1>
       <p>{{ site.description }}</p>
     </header>
 
@@ -35,4 +40,5 @@
     </footer>
   </div>
 </body>
+
 </html>
