--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -18,14 +18,14 @@ p {
 body {
   font-family: $font-stack;
   line-height: 1.6;
-  background-color: #f2c5c5;
+  background-color: #7e7e7e67;
 }
 
 header {
   text-align: center;
   padding: 24px;
   color: #141413;
-background: linear-gradient(135deg, #f19c9c, #ffffff);
+background: linear-gradient(135deg, #7f7e7e,);
 }
 
 main {
@@ -56,7 +56,7 @@ nav {
     margin: 0;
     padding: 0;
     overflow: hidden;
-background: linear-gradient(135deg, #fecec9, #f86666);
+background: linear-gradient(135deg, #746f6f);
   }
 
   li {
